2010-01-22  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	Round fragments's duration to prevent innacuracies in the encoder's
	keyframe distance

2010-01-21  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/muxers/mpegts/mpegts.xml:
	Add missing __init__.py to the bundle

2010-01-20  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion-fragmented-streaming.spec.in:
	Remove 'python-uuid' and 'gst-plugins-bad' dependencies.
	They are handled by fsp-role-streamer.
	Fix the release date

2010-01-19  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	Revert partially 26726: Don't drop preroll buffer
	The preroll buffer is the same as the first buffer. We don't
	need it

2010-01-19  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/hlsring.py:
	Fix the way the target duration is set.
	* flumotion/test/test_resource.py:
	Added test for authentication renewal.

2010-01-18  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/hlsring.py:
	* flumotion/component/consumers/applestreamer/resources.py:
	* flumotion/component/muxers/mpegts/mpegts.py:
	* flumotion/test/test_hls_ring.py:
	* flumotion/test/test_mpegts.py:
	* flumotion/test/test_ts_segmenter.py:
	Fix pep8 and remove unused variables and imports

2010-01-18  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	Don't drop preroll buffers

2010-01-15  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Fix typo in event name

2010-01-15  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py: